--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,46 +1,35 @@
-name: "Estrutura de Diretórios e Arquivos"
+name: Hello Github Actions
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
-env:
-  NODE_VERSION: '18'
-
-jobs: 
-  demonstrando-estrutura:
-    name: "Demonstrar Estrutura Básica"
+jobs:
+  hello-job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do Código
+      - name: Checkout Código
         uses: actions/checkout@v4
 
-      - name: Mostrar estrutura .github/workflows
-        run: |
-          echo " == ESTRUTURA DE DIRETORÍOS E ARQUIVOS .github/workflows == "
-          ls -la .github/workflows
-          echo ""
-          echo " Total de workflows: $(ls -1 .github/workflows | wc -l) "
+      - name: Executar Hello World
+        run: echo " Hello Github Actions"
 
-      - name: Elementos obrigatórios do workflow
+      - name: Mostrar informações do Sistema
         run: |
-          echo " == ELEMENTOS OBRIGATÓRIOS == "
-          echo " 1. name: Nome do workflow "
-          echo " 2. on: Evento que dispara o workflow "
-          echo " 3. jobs: Definição dos trabalhos a serem executados "
-          echo " 4. runs-on: Ambiente onde o job será executado "
-          echo " 5. steps: Passos individuais dentro de um job "
-          echo ""
-          echo " Total de elementos obrigatórios: 5 "
+          echo "Sistema Operacional: ${{ runner.os }} "
+          echo "Diretório Atual: $(pwd)"
+          echo "Data Atual: $(date)"
+          echo "Usuário: $(whoami)"
 
-      - name: Variáveis e Contexto
+      - name: Listar arquivos do repositório
+        run: ls -la
+      
+      - name: Comandos múltiplos
         run: |
-          echo " == VARIÁVEIS E CONTEXTO == "
-          echo " Variáveis env: ${{ env.NODE_VERSION }} "
-          echo " 1. env: Definição de variáveis de ambiente "
-          echo " 2. contextos: Acesso a informações do workflow, job, runner, etc. "
-          echo ""
-          echo " Total de variáveis e contextos: 2 "
-    
+          echo "Este é o Lab 01 do curso de Github Actions"
+          echo "Workflow executado com sucesso"
+          echo "Pronto para os proximos desafios!"
