--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,32 +1,29 @@
-name: Jobs Paralelo vs Sequencial
-on: [push]
+on:
+  schedule:
+    # Executa as 21:51 horario brasilia (UTC)
+    - cron: '55 00 * * *'
+  workflow_dispatch:
 
 jobs:
-  lint:
+  scheduled-job:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - name: Lint
-        run: echo "Lint OK"
+    - name: Checkout código
+      uses: actions/checkout@v4
+    
+    - name: Informações do Schedule
+      run: |
+        echo "Workflow disparado por SCHEDULE"
+        echo "Data atual: $(date)"
+        echo "Hora UTC: $(date -u)"
+        echo "Timezone: $(date +%Z)"
+    
+    - name: Relatório diário automatizado
+      run: |
+        echo "RELATÓRIO DIÁRIO AUTOMATIZADO"
+        echo "================================"
+        echo "Total de commits: $(git rev-list --all --count)"
+        echo "Contribuidores únicos: $(git shortlog -sn | wc -l)"
+        echo "Último commit: $(git log -1 --pretty=format:'%h - %s (%an, %ar)')"
 
-  testes:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Testes
-        run: echo "Testes OK"
-
-  build:
-    needs: [lint, testes]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build
-        run: echo "Build executado"
-
-  publicar:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Publicar (simulado)
-        run: echo "Publicação concluída"
