--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Jobs Paralelos
+name: Matrix Strategy
 
 on:
   push:
@@ -6,87 +6,65 @@ on:
   workflow_dispatch:
 
 jobs:
-  # Job 1: Análise de código
-  code-analysis:
-    runs-on: ubuntu-latest
+  # Job com matrix para múltiplos ambientes
+  test-matrix:
+    runs-on: ${{ matrix.os }}
+    
+    strategy:
+      fail-fast: false  # Não para se um job falhar
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        node-version: [16, 18, 20]
+        include:
+          # Configurações específicas
+          - os: ubuntu-latest
+            node-version: 20
+            experimental: true
+        exclude:
+          # Excluir combinações problemáticas
+          - os: windows-latest
+            node-version: 16
     
     steps:
     - name: Checkout código
       uses: actions/checkout@v4
     
-    - name: Análise de sintaxe
+    - name: Informações da matrix
       run: |
-        echo "Analisando sintaxe do código..."
-        sleep 3
-        echo "Análise de sintaxe concluída"
+        echo "OS: ${{ matrix.os }}"
+        echo "Node: ${{ matrix.node-version }}"
+        echo "Experimental: ${{ matrix.experimental }}"
     
-    - name: Verificar padrões de código
-      run: |
-        echo "Verificando padrões de código..."
-        sleep 2
-        echo "Padrões verificados"
-    
-    - name: Upload relatório análise
-      run: |
-        echo "Fazendo upload do relatório..."
-        echo "Relatório de análise gerado em $(date)" > analysis-report.txt
-        echo "Relatório salvo"
-
-  # Job 2: Testes unitários (executa em paralelo com code-analysis)
-  unit-tests:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-    
-    - name: Configurar ambiente de testes
-      run: |
-        echo "Configurando ambiente de testes..."
-        sleep 2
-        echo "Ambiente configurado"
-    
-    - name: Executar testes unitários
-      run: |
-        echo "Executando testes unitários..."
-        sleep 4
-        echo "Todos os testes passaram (15/15)"
-    
-    - name: Gerar relatório de cobertura
-      run: |
-        echo "Gerando relatório de cobertura..."
-        sleep 1
-        echo "Cobertura: 85%"
-
-  # Job 3: Build da aplicação (executa em paralelo)
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-    
-    - name: Configurar ambiente de build
-      run: |
-        echo "Configurando ambiente de build..."
-        sleep 2
-        echo "Ambiente configurado"
-    
-    - name: Compilar aplicação
-      run: |
-        echo "Compilando aplicação..."
-        sleep 5
-        echo "Build concluído com sucesso"
-    
-    - name: Gerar artefatos
-      run: |
-        echo "Gerando artefatos..."
-        mkdir -p build
-        echo "Aplicação compilada em $(date)" > build/app.jar
-        echo "Artefatos gerados"
-    
-    - name: Upload artefatos
-      uses: actions/upload-artifact@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
-        name: build-artifacts
-        path: build/
+        node-version: ${{ matrix.node-version }}
+    
+    - name: Verificar versões
+      run: |
+        echo "Node version: $(node --version)"
+        echo "NPM version: $(npm --version)"
+    
+    - name: Executar testes específicos do OS
+      run: |
+        echo "Executando testes no ${{ matrix.os }} com Node ${{ matrix.node-version }}..."
+        sleep 2
+        echo "Testes concluídos"
+    
+    - name: Teste experimental
+      if: matrix.experimental == true
+      run: |
+        echo "Executando testes experimentais..."
+        sleep 1
+        echo "Testes experimentais concluídos"
+
+  # Job que coleta resultados da matrix
+  collect-results:
+    runs-on: ubuntu-latest
+    needs: test-matrix
+    
+    steps:
+    - name: Coletar resultados
+      run: |
+        echo "Coletando resultados de todos os jobs da matrix..."
+        echo "Todos os testes da matrix foram executados"
